fixed gap spacing for question 4 radios

--- a/StaticFile/stylesheets/style.css
+++ b/StaticFile/stylesheets/style.css
@@ -200,6 +200,7 @@ form {
     border-radius: 50px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 400px;
+    gap: 30px;
 }
 
 .share-selection-box form {
@@ -404,7 +405,7 @@ a {
     text-decoration: none;
 }
 
-/*sidebar */
+/*======================== Sidebar CSS ========================*/
 .sidebar-left, .sidebar-right {
     display: flex;
     flex-direction: column;
